APIs/googleapis.com/cloudresourcemanager/v3/python-client/README.md
# openapi-client
Creates, reads, and updates metadata for Google Cloud Platform resource containers.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v3
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://cloudresourcemanager.googleapis.com
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://cloudresourcemanager.googleapis.com"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.EffectiveTagsApi(api_client)
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)
    page_size = 56 # int | Optional. The maximum number of effective tags to return in the response. The server allows a maximum of 300 effective tags to return in a single page. If unspecified, the server will use 100 as the default. (optional)
    page_token = 'page_token_example' # str | Optional. A pagination token returned from a previous call to `ListEffectiveTags` that indicates from where this listing should continue. (optional)
    parent = 'parent_example' # str | Required. The full resource name of a resource for which you want to list the effective tags. E.g. \"//cloudresourcemanager.googleapis.com/projects/123\" (optional)

    try:
        api_response = api_instance.cloudresourcemanager_effective_tags_list(xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, page_size=page_size, page_token=page_token, parent=parent)
        print("The response of EffectiveTagsApi->cloudresourcemanager_effective_tags_list:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling EffectiveTagsApi->cloudresourcemanager_effective_tags_list: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://cloudresourcemanager.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*EffectiveTagsApi* | [**cloudresourcemanager_effective_tags_list**](docs/EffectiveTagsApi.md#cloudresourcemanager_effective_tags_list) | **GET** /v3/effectiveTags | 
*FoldersApi* | [**cloudresourcemanager_folders_create**](docs/FoldersApi.md#cloudresourcemanager_folders_create) | **POST** /v3/folders | 
*FoldersApi* | [**cloudresourcemanager_folders_list**](docs/FoldersApi.md#cloudresourcemanager_folders_list) | **GET** /v3/folders | 
*FoldersApi* | [**cloudresourcemanager_folders_search**](docs/FoldersApi.md#cloudresourcemanager_folders_search) | **GET** /v3/folders:search | 
*LiensApi* | [**cloudresourcemanager_liens_create**](docs/LiensApi.md#cloudresourcemanager_liens_create) | **POST** /v3/liens | 
*LiensApi* | [**cloudresourcemanager_liens_list**](docs/LiensApi.md#cloudresourcemanager_liens_list) | **GET** /v3/liens | 
*OrganizationsApi* | [**cloudresourcemanager_organizations_search**](docs/OrganizationsApi.md#cloudresourcemanager_organizations_search) | **GET** /v3/organizations:search | 
*ProjectsApi* | [**cloudresourcemanager_projects_create**](docs/ProjectsApi.md#cloudresourcemanager_projects_create) | **POST** /v3/projects | 
*ProjectsApi* | [**cloudresourcemanager_projects_list**](docs/ProjectsApi.md#cloudresourcemanager_projects_list) | **GET** /v3/projects | 
*ProjectsApi* | [**cloudresourcemanager_projects_move**](docs/ProjectsApi.md#cloudresourcemanager_projects_move) | **POST** /v3/{name}:move | 
*ProjectsApi* | [**cloudresourcemanager_projects_search**](docs/ProjectsApi.md#cloudresourcemanager_projects_search) | **GET** /v3/projects:search | 
*ProjectsApi* | [**cloudresourcemanager_projects_undelete**](docs/ProjectsApi.md#cloudresourcemanager_projects_undelete) | **POST** /v3/{name}:undelete | 
*TagBindingsApi* | [**cloudresourcemanager_tag_bindings_create**](docs/TagBindingsApi.md#cloudresourcemanager_tag_bindings_create) | **POST** /v3/tagBindings | 
*TagBindingsApi* | [**cloudresourcemanager_tag_bindings_list**](docs/TagBindingsApi.md#cloudresourcemanager_tag_bindings_list) | **GET** /v3/tagBindings | 
*TagKeysApi* | [**cloudresourcemanager_tag_keys_create**](docs/TagKeysApi.md#cloudresourcemanager_tag_keys_create) | **POST** /v3/tagKeys | 
*TagKeysApi* | [**cloudresourcemanager_tag_keys_get_namespaced**](docs/TagKeysApi.md#cloudresourcemanager_tag_keys_get_namespaced) | **GET** /v3/tagKeys/namespaced | 
*TagKeysApi* | [**cloudresourcemanager_tag_keys_list**](docs/TagKeysApi.md#cloudresourcemanager_tag_keys_list) | **GET** /v3/tagKeys | 
*TagValuesApi* | [**cloudresourcemanager_tag_values_create**](docs/TagValuesApi.md#cloudresourcemanager_tag_values_create) | **POST** /v3/tagValues | 
*TagValuesApi* | [**cloudresourcemanager_tag_values_get**](docs/TagValuesApi.md#cloudresourcemanager_tag_values_get) | **GET** /v3/{name} | 
*TagValuesApi* | [**cloudresourcemanager_tag_values_get_iam_policy**](docs/TagValuesApi.md#cloudresourcemanager_tag_values_get_iam_policy) | **POST** /v3/{resource}:getIamPolicy | 
*TagValuesApi* | [**cloudresourcemanager_tag_values_get_namespaced**](docs/TagValuesApi.md#cloudresourcemanager_tag_values_get_namespaced) | **GET** /v3/tagValues/namespaced | 
*TagValuesApi* | [**cloudresourcemanager_tag_values_list**](docs/TagValuesApi.md#cloudresourcemanager_tag_values_list) | **GET** /v3/tagValues | 
*TagValuesApi* | [**cloudresourcemanager_tag_values_patch**](docs/TagValuesApi.md#cloudresourcemanager_tag_values_patch) | **PATCH** /v3/{name} | 
*TagValuesApi* | [**cloudresourcemanager_tag_values_set_iam_policy**](docs/TagValuesApi.md#cloudresourcemanager_tag_values_set_iam_policy) | **POST** /v3/{resource}:setIamPolicy | 
*TagValuesApi* | [**cloudresourcemanager_tag_values_tag_holds_create**](docs/TagValuesApi.md#cloudresourcemanager_tag_values_tag_holds_create) | **POST** /v3/{parent}/tagHolds | 
*TagValuesApi* | [**cloudresourcemanager_tag_values_tag_holds_delete**](docs/TagValuesApi.md#cloudresourcemanager_tag_values_tag_holds_delete) | **DELETE** /v3/{name} | 
*TagValuesApi* | [**cloudresourcemanager_tag_values_tag_holds_list**](docs/TagValuesApi.md#cloudresourcemanager_tag_values_tag_holds_list) | **GET** /v3/{parent}/tagHolds | 
*TagValuesApi* | [**cloudresourcemanager_tag_values_test_iam_permissions**](docs/TagValuesApi.md#cloudresourcemanager_tag_values_test_iam_permissions) | **POST** /v3/{resource}:testIamPermissions | 


## Documentation For Models

 - [AuditConfig](docs/AuditConfig.md)
 - [AuditLogConfig](docs/AuditLogConfig.md)
 - [Binding](docs/Binding.md)
 - [CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation.md)
 - [CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation.md)
 - [CreateFolderMetadata](docs/CreateFolderMetadata.md)
 - [CreateProjectMetadata](docs/CreateProjectMetadata.md)
 - [EffectiveTag](docs/EffectiveTag.md)
 - [Expr](docs/Expr.md)
 - [Folder](docs/Folder.md)
 - [FolderOperation](docs/FolderOperation.md)
 - [FolderOperationError](docs/FolderOperationError.md)
 - [GetIamPolicyRequest](docs/GetIamPolicyRequest.md)
 - [GetPolicyOptions](docs/GetPolicyOptions.md)
 - [Lien](docs/Lien.md)
 - [ListEffectiveTagsResponse](docs/ListEffectiveTagsResponse.md)
 - [ListFoldersResponse](docs/ListFoldersResponse.md)
 - [ListLiensResponse](docs/ListLiensResponse.md)
 - [ListProjectsResponse](docs/ListProjectsResponse.md)
 - [ListTagBindingsResponse](docs/ListTagBindingsResponse.md)
 - [ListTagHoldsResponse](docs/ListTagHoldsResponse.md)
 - [ListTagKeysResponse](docs/ListTagKeysResponse.md)
 - [ListTagValuesResponse](docs/ListTagValuesResponse.md)
 - [MoveFolderMetadata](docs/MoveFolderMetadata.md)
 - [MoveFolderRequest](docs/MoveFolderRequest.md)
 - [MoveProjectRequest](docs/MoveProjectRequest.md)
 - [Operation](docs/Operation.md)
 - [Organization](docs/Organization.md)
 - [Policy](docs/Policy.md)
 - [Project](docs/Project.md)
 - [ProjectCreationStatus](docs/ProjectCreationStatus.md)
 - [SearchFoldersResponse](docs/SearchFoldersResponse.md)
 - [SearchOrganizationsResponse](docs/SearchOrganizationsResponse.md)
 - [SearchProjectsResponse](docs/SearchProjectsResponse.md)
 - [SetIamPolicyRequest](docs/SetIamPolicyRequest.md)
 - [Status](docs/Status.md)
 - [TagBinding](docs/TagBinding.md)
 - [TagHold](docs/TagHold.md)
 - [TagKey](docs/TagKey.md)
 - [TagValue](docs/TagValue.md)
 - [TestIamPermissionsRequest](docs/TestIamPermissionsRequest.md)
 - [TestIamPermissionsResponse](docs/TestIamPermissionsResponse.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
 - **https://www.googleapis.com/auth/cloud-platform.read-only**: View your data across Google Cloud services and see the email address of your Google Account

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
 - **https://www.googleapis.com/auth/cloud-platform.read-only**: View your data across Google Cloud services and see the email address of your Google Account


## Author




